--- a/contacts.html
+++ b/contacts.html
@@ -11,10 +11,10 @@
           <header>
             <a href="index.html" class="logo">SNM.</a>
             <div id="toggle" onclick="toggle()"></div>
-          </header>
-            <h2>Contact</h2>
+          </header><div><h2>Contact</h2>
             <p>Email: smofokeng74@gmail.com</p>
-            <p>Phone: 074 952 1313 / 069 475 3376</p>
+            <p>Phone: 074 952 1313 / 069 475 3376</p></div>
+            
         </section>
         <div id="navigation">
           <ul>
