--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="content">
       <h2>Hello World,<br>I'm <span>Siyabonga Mofokeng</span></h2>
       <p>Welcome to my web portfolio! As an IT administrator and data analyst, I showcase my expertise in managing systems, analyzing data, and driving insights for informed decision-making. Explore and discover!</p>
-      <a href="#">Know More</a>
+      <a href="https://siyabongamofokeng.github.io/">Know More</a>
     </div>
     <ul class="sci">
       <li><a href="https://www.credly.com/badges/e8898f2b-590b-46e5-89ee-049b4065a1c6/email"><img src="google.png"></a></li>
