--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="https://www.credly.com/badges/e8898f2b-590b-46e5-89ee-049b4065a1c6/email"><img src="google.png"></a></li>
       <li><a href="https://www.credly.com/badges/44cb63e5-1982-4a2a-bbe8-6362dc08cca9/linked_in_profile"><img src="letter-n.png"></a></li>
       <li><a href="https://www.linkedin.com/in/siyabonga-mofokeng-13389015b/"><img src="linkedin.png"></a></li>
+      <li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d4553d70-b419-468b-bc40-afd80d76de8d" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li>
     </ul>
   </section>
   <div id="navigation">
