--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>Hello World,<br>I'm <span>Siyabonga Mofokeng</span></h2>
       <p>Welcome to my web portfolio! As an IT administrator and Data analyst, I showcase my expertise in managing systems, analyzing data, and driving insights for informed decision-making. Explore and discover!</p>
       <a href="https://siyabongamofokeng.github.io/">Know More</a>
-      <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d4553d70-b419-468b-bc40-afd80d76de8d" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+      <div data-share-badge-id="d4553d70-b419-468b-bc40-afd80d76de8d" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
     </div>
     <ul class="sci">
       <li><a href="https://www.credly.com/badges/e8898f2b-590b-46e5-89ee-049b4065a1c6/email"><img src="google.png"></a></li>
